# chatapp

./: .gitignore  README.md  chat_db.session.sql  package.json
chatappjs/: package-lock.json  package.json
chatappjs/src/: app.html
chatappjs/src/lib/utils/components/: HeightTransition.svelte
chatappjs/src/routes/: +page.svelte  CardMensagem.svelte  ChatCard.svelte  ContainerChat.svelte  ContainerChatSelector.svelte  store.ts  style.css
chatappjs/src/routes/login/: +page.svelte  style.css
chatappjs/src/utils/: date.ts  requests.ts
server/: .gitignore  Cargo.toml
server/src/: db.rs  lobby.rs  logger.rs  main.rs  message.rs  routes.rs  socket.rs  sockets.rs
server/src/db/: chat_db.rs  chat_message_db.rs  session_db.rs  user.rs  user_db.rs
server/src/routes/: base_route.rs  chat_route.rs  user_route.rs
server/src/sockets/: chat.rs  info.rs
server/src/sockets/chat/: lobby.rs  lobby_actor.rs  lobby_socket.rs  socket.rs
server/src/sockets/info/: info_actor.rs  info_socket.rs
src/routes/: +page.svelte  CardMensagem.svelte  style.css
