[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-web = "4"
actix-web-actors = "4.2.0"
serde = { version = "1.0.187", features = ["derive"] }
serde_json = "1.0.107"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
env_logger = "0.10"
rusqlite = { version = "0.29", features = ["bundled"] }
argon2 = "0.5.2"
actix-session = { version = "0.8.0", features = ["cookie-session"] }
actix-cors = "0.6.4"
log = "0.4"
log4rs = "1.2"
chrono = "0.4"
actix-interop = "0.3"
